--- a/semantica_e_acessibilidade/index.html
+++ b/semantica_e_acessibilidade/index.html
@@ -17,7 +17,7 @@
     <div class="page">
         <div class="nav">
           <a id="logo" href="#">
-            <img src="images/logo.svg" alt="Treine.me" />
+            <img src="https://raw.githubusercontent.com/rafael-vidale/Projeto02/411f2b1e0d2698ffa54885f0b5d321e02736927e/images/logo.svg" alt="Treine.me" />
           </a>
           <div class="list">
             <div class="item"><a href="#">Home</a></div>
@@ -38,7 +38,7 @@
           </div>
 
           <div class="button">
-            <img src="images/whats.svg" alt="Ícone do whatsapp">
+            <img src="https://raw.githubusercontent.com/rafael-vidale/Projeto02/411f2b1e0d2698ffa54885f0b5d321e02736927e/images/whats.svg" alt="Ícone do whatsapp">
             Comece já
           </div>
 
@@ -47,14 +47,14 @@
         
 
 
-        <img src="images/img.png" alt="Desenho de uma mulher pulando corta numa academia.">
+        <img src="https://github.com/rafael-vidale/Projeto02/blob/main/images/img.png" alt="Desenho de uma mulher pulando corta numa academia.">
       </div>
       <div class="footer">
           fale conosco no instagram <a href="https://instagram.com/treineme" target="_blank">@treine.me</a>
       </div>
     </div>
 
-    <img id="balls" src="images/balls.svg" alt="Bolinhas decorativas verdes no canto inferior direito da página.">
+    <img id="balls" src="https://raw.githubusercontent.com/rafael-vidale/Projeto02/411f2b1e0d2698ffa54885f0b5d321e02736927e/images/balls.svg" alt="Bolinhas decorativas verdes no canto inferior direito da página.">
 
   </body>
 </html>
